--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
-<p>dashboard works!</p>
+<h2>My Accounts</h2>
+<ul>
+    <li *ngFor="let account of accounts">
+        <span class="badge">{{ account.account_number }}</span> {{account.account_type}} {{account.balance}}
+    </li>
+</ul>
