--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<h2>My Accounts</h2>
+<h2>Account List</h2>
 
 <style>
     table,
@@ -16,13 +16,15 @@
 
 <table style="width:100%">
     <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Age</th>
+        <th>Account Number</th>
+        <th>Account Type</th>
+        <th>Balance</th>
     </tr>
     <tr *ngFor="let account of accounts">
         <td> {{ account.account_number }} </td>
         <td> {{account.account_type}} </td>
-        <td> {{account.balance}} </td>
+        <td> ZAR {{account.balance}} </td>
+        <td> <button (click)="withdraw()">Withdraw</button> </td>
     </tr>
 </table>
+<p> Balance: ZAR {{ accountBalance }} </p>
