--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,30 +1,31 @@
-<h2>Account List</h2>
+<nav>
+    <div class="nav-wrapper">
+        <a class="brand-logo center">Acme Bank</a>
+    </div>
+</nav>
 
-<style>
-    table,
-    th,
-    td {
-        border: 1px solid black;
-        border-collapse: collapse;
-    }
+<div class="container">
+    <blockquote>
+        <h5>Account List</h5>
+    </blockquote>
 
-    th,
-    td {
-        padding: 15px;
-    }
-</style>
+    <table class="striped centered">
+        <thead>
+            <tr>
+                <th>Account Number</th>
+                <th>Account Type</th>
+                <th>Balance</th>
+            </tr>
+        </thead>
 
-<table style="width:100%">
-    <tr>
-        <th>Account Number</th>
-        <th>Account Type</th>
-        <th>Balance</th>
-    </tr>
-    <tr *ngFor="let account of accounts">
-        <td> {{ account.account_number }} </td>
-        <td> {{account.account_type}} </td>
-        <td> ZAR {{account.balance}} </td>
-        <td> <button (click)="withdraw()">Withdraw</button> </td>
-    </tr>
-</table>
-<p> Balance: ZAR {{ accountBalance }} </p>
+        <tbody>
+            <tr *ngFor="let account of accounts">
+                <td> {{ account.account_number }} </td>
+                <td> {{account.account_type}} </td>
+                <td> {{account.balance | currency:'ZAR '}} </td>
+                <td> <button class="waves-effect waves-light btn" (click)="withdraw()">Withdraw</button> </td>
+            </tr>
+        </tbody>
+    </table>
+    <blockquote> Balance: {{ accountBalance | currency:'ZAR ' }} </blockquote>
+</div>
